--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Basketball Scoreboard</title>
     <link rel="stylesheet" href="styles.css" />
-    <script type="module" src="index.js" defer></script>
+    <script src="index.js" defer></script>
   </head>
   <body>
     <div class="main">
